<resources>
    <string name="app_name">StudentApp</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="id">ID</string>
    <string name="checked">Checked</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>