<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentEditFragment">

    <LinearLayout
        android:id="@+id/form_conatiner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:layout_marginTop="20sp"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/avatar"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginRight="10sp"
                />
            <EditText
                android:id="@+id/student_name_field"
                android:minWidth="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                />
        </LinearLayout><LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:layout_marginRight="10sp"
            />
        <EditText
            android:id="@+id/student_id_field"
            android:minWidth="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_marginRight="10sp"
                />
            <EditText
                android:id="@+id/student_address_field"
                android:minWidth="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:layout_marginRight="10sp"
                />
            <EditText
                android:id="@+id/student_phone_field"
                android:minWidth="30sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checked"
                android:layout_marginRight="10sp"
                />
            <CheckBox
                android:id="@+id/student_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <RelativeLayout
                android:id="@+id/newStudent_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                >
                <Button
                    android:id="@+id/editStudent_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_alignParentEnd="true"
                    />

                <Button
                    android:id="@+id/editStudent_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
                <Button
                    android:id="@+id/editStudent_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:layout_centerHorizontal="true"
                    />
            </RelativeLayout>

            <ProgressBar
                android:id="@+id/details_progressbar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="163dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="61dp" />
        </RelativeLayout>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>